--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hashgraph/sdk": "^2.28.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "4.1"
   }
 }
